--- a/assets/less/patterns.less
+++ b/assets/less/patterns.less
@@ -486,7 +486,7 @@ footer {
     .border-radius(6px);
   }
   &.small {
-    padding: 7px 9px 7px;
+    /*padding: 7px 9px 7px;*/
     font-size: 11px;
   }
 }
