--- a/assets/less/patterns.less
+++ b/assets/less/patterns.less
@@ -597,37 +597,57 @@ input[type=submit].btn {
   ul {
     float: left;
     margin: 0;
-    border: 1px solid #ddd;
-    border: 1px solid rgba(0,0,0,.15);
+    /*border: 1px solid #ddd;*/
+    /*border: 1px solid rgba(0,0,0,.15);*/
     .border-radius(3px);
     .box-shadow(0 1px 2px rgba(0,0,0,.05));
+    font-weight: bold;
   }
   li {
     display: inline;
   }
   a {
-    float: left;
-    padding: 0 14px;
-    line-height: (@baseline * 2) - 2;
-    border-right: 1px solid;
-    border-right-color: #ddd;
-    border-right-color: rgba(0,0,0,.15);
-    *border-right-color: #ddd; /* IE6-7 */
+    border: 1px solid #ccc;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    padding: 3px 6px;
+    margin: 0 1px;
     text-decoration: none;
   }
-  a:hover,
   .active a {
-    background-color: lighten(@blue, 45%);
+    background: #39a3e6;
+    border: 1px solid #0082d5;
+    color: #fff;
+  }
+  a:hover {
+    color: #fff;
+    background: #ec8526;
+    border: 1px solid #d77011;
   }
   .disabled a,
   .disabled a:hover {
     background-color: transparent;
     color: @grayLight;
+    border: 1px solid #ccc;
   }
   .next a {
-    border: 0;
+    /*border: 0;*/
   }
 }
+.block .pagination {
+    font-size: 10px;
+    font-weight: bold;
+    padding-bottom: 15px;
+    padding-top: 15px;
+    border-top: 1px solid #eee;
+    }
+
+
+
+
+.block .pagination a:hover {
+    }
 
 
 // WELLS
